made some changes

--- a/templates/administrator/admin_contactus_tracker.html
+++ b/templates/administrator/admin_contactus_tracker.html
@@ -230,8 +230,8 @@
             <div class="text-center py-5">
                 <div class="text-muted">
                     <i class="fas fa-clipboard-list fa-4x mb-4 text-secondary"></i>
-                    <h3>No Registration Data Found</h3>
-                    <p class="lead">Registration tracking data will appear here once users start registering.</p>
+                    <h3>No contactustracker Data Found</h3>
+                    <p class="lead">ContactUs tracking data will appear here once users start registering.</p>
                 </div>
             </div>
         {% endif %}
