--- a/templates/administrator/admin_contactus.html
+++ b/templates/administrator/admin_contactus.html
@@ -91,7 +91,7 @@
         </div>
 
         <!-- Unread Messages Section -->
-        <h5 class="text-dark mb-3">
+        <h5 class="text-white mb-3">
           <i class="fas fa-envelope text-primary me-2"></i>Unread Messages
           <span class="badge bg-primary ms-2" id="unreadMessagesCount">{{ messages|length }}</span>
         </h5>
